🏗️ non test shared extracted as library

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ androidx-appcompat = "1.7.1"
 androidx-material = "1.13.0"
 androidx-activity-compose = "1.9.3"
 androidx-compose-bom = "2025.01.00"
+#androidx-compose-bom = "2026.02.00"
 androidx-constraintlayout = "2.2.1"
 androidx-datastore-preferences = "1.2.0"
 androidx-lifecycle-runtime-ktx = "2.9.4"
