--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,9 @@ jobs:
       RELEASE_KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
       RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
+      with:
+        submodules: true
     
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -44,12 +46,12 @@ jobs:
         EOF
 
     # This step is temporary until plugin publication is approved
-    - name: Build plugin locally
-      shell: bash
-      run: |
-        git clone https://github.com/vokimon/android-yaml-strings.git plugin-temp
-        cd plugin-temp
-        ./gradlew publishToMavenLocal
+    #- name: Build plugin locally
+    #  shell: bash
+    #  run: |
+    #    git clone https://github.com/vokimon/android-yaml-strings.git plugin-temp
+    #    cd plugin-temp
+    #    ./gradlew publishToMavenLocal
 
     - name: Build with Gradle
       run: ./gradlew build
