🔧 submodules option for fdroid

--- a/meta/overrides.yaml
+++ b/meta/overrides.yaml
@@ -9,6 +9,7 @@ keywords:
 - diesel
 fdroid_categories:
 - Navigation
+submodules: true
 fdroid_fields:
   AuthorEmail: fdroid@canvoki.net
   AuthorName: David García Gazón
