--- a/tools/net.canvoki.carburoid.yml
+++ b/tools/net.canvoki.carburoid.yml
@@ -7,7 +7,6 @@ License: AGPL-3.0-or-later
 AuthorName: David García Gazón
 AuthorEmail: fdroid@canvoki.net
 AuthorWebSite: https://canvoki.net/coder
-WebSite: https://github.com/vokimon/carburoid
 SourceCode: https://github.com/vokimon/carburoid
 IssueTracker: https://github.com/vokimon/carburoid/issues
 Translation: https://hosted.weblate.org/projects/carburoid/
@@ -17,14 +16,80 @@ AutoName: Carburoid
 
 RepoType: git
 Repo: https://github.com/vokimon/carburoid.git
-Binaries: https://github.com/vokimon/carburoid/releases/download/carburoid-%v/net.canvoki.carburoid-floss-%v-release.apk
+Binaries: 
+  https://github.com/vokimon/carburoid/releases/download/carburoid-%v/net.canvoki.carburoid-floss-%v-release.apk
 
 Builds:
-  - versionName: 1.4.2
-    versionCode: 1040200
-    commit: carburoid-1.4.2
-    submodules: true
+  - versionName: 1.2.0
+    versionCode: 1020000
+    commit: 767ddb0cbfa1e8ed10a8ad35c864e6c8a421a503
     subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.2.1
+    versionCode: 1020100
+    commit: d8125a7bc3d479a6e9f22154c42cadd457b8abf8
+    subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.2.2
+    versionCode: 1020200
+    commit: c4100245b84ec83c63d8a0550f47bf7091fcb031
+    subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.2.3
+    versionCode: 1020300
+    commit: d0e4503f7a86f1a68578cb096751f7dc93b22a90
+    subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.3.0
+    versionCode: 1030000
+    commit: 318d070568bc1b0164af18baea7582af80d0f423
+    subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.3.2
+    versionCode: 1030200
+    commit: 804cff68a60d984c55ab8f61ba9c3bafafffaa8e
+    subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.3.3
+    versionCode: 1030300
+    commit: 7827329eaadd6e6f69333ec3fece1f4b5b9acf2a
+    subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.4.0
+    versionCode: 1040000
+    commit: 53a2727e98685451850a384b7cc7210f3dddaa21
+    subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.4.1
+    versionCode: 1040100
+    commit: 8e874928b53764d02aca0f52baddccd6e27debe1
+    subdir: app
+    gradle:
+      - floss
+
+  - versionName: 1.4.3
+    versionCode: 1040300
+    commit: carburoid-1.4.3
+    subdir: app
+    submodules: true
+    scandelete:
+      - build-logic
     gradle:
       - floss
 
