--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ androidx-test-espresso-core = "3.7.0"
 androidx-test-runner = "1.6.2"
 kotlinx-coroutines-bom = "1.10.2"
 kotlinx-serialization-bom = "1.10.0"
+maplibre-compose = "0.12.1"
 
 # Testing
 junit = "4.13.2"
@@ -84,7 +85,8 @@ java-diff-utils = { group = "io.github.java-diff-utils", name = "java-diff-utils
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 koalaplot-core-android = { group = "io.github.koalaplot", name = "koalaplot-core-android", version.ref = "koalaplot" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "play-services-location" }
-maplibre-compose = { module = "org.maplibre.compose:maplibre-compose", version = "0.12.1" }
+maplibre-compose = { module = "org.maplibre.compose:maplibre-compose", version.ref = "maplibre-compose" }
+maplibre-composeMaterial3 = { module = "org.maplibre.compose:maplibre-compose-material3", version.ref = "maplibre-compose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
