--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ android.enableJetifier=true
 org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 kotlin.daemon.jvmargs=-Xmx2g
-yamlStrings.autoCompletedPartialLanguages=fr,ru
+yamlStrings.autoCompletedPartialLanguages=ru
